Add board feature