@@ -2,10 +2,8 @@ package com.taynote.api.controller;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -14,12 +12,15 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.taynote.api.dto.ColumnDto;
-import com.taynote.api.dto.CreateColumnRequest;
-import com.taynote.api.dto.UpdateColumnRequest;
-import com.taynote.api.entity.BoardColumn;
+import com.taynote.api.dto.column.ColumnDto;
+import com.taynote.api.dto.column.request.CreateColumnRequest;
+import com.taynote.api.dto.column.request.UpdateColumnRequest;
+import com.taynote.api.dto.column.response.CreateColumnResponse;
+import com.taynote.api.dto.column.response.UpdateColumnResponse;
 import com.taynote.api.mapper.ColumnMapper;
 import com.taynote.api.service.ColumnService;
 
@@ -34,24 +35,23 @@ public class ColumnController {
     }
 
     @GetMapping
-    public List<ColumnDto> findAll() {
-        return columnService.findAll().stream().map(ColumnMapper::toDto).collect(Collectors.toList());
+    public List<ColumnDto> findAll(@RequestParam UUID boardId) {
+        return columnService.findAll(boardId).stream().map(ColumnMapper::toDto).toList();
     }
 
     @PostMapping
-    public ResponseEntity<ColumnDto> create(@RequestBody CreateColumnRequest request) {
-        BoardColumn column = columnService.create(request);
-        return ResponseEntity.status(HttpStatus.CREATED).body(ColumnMapper.toDto(column));
+    public ResponseEntity<CreateColumnResponse> create(@RequestBody CreateColumnRequest request) {
+        return ResponseEntity.status(HttpStatus.CREATED).body(columnService.create(request));
     }
 
     @PatchMapping("/{id}")
-    public ColumnDto update(@PathVariable UUID id, @RequestBody UpdateColumnRequest request) {
-        return ColumnMapper.toDto(columnService.update(id, request));
+    public UpdateColumnResponse update(@PathVariable UUID id, @RequestBody UpdateColumnRequest request) {
+        return columnService.update(id, request);
     }
 
-    @DeleteMapping(value = "/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
-    public UUID delete(@PathVariable UUID id) {
+    @DeleteMapping(value = "/{id}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void delete(@PathVariable UUID id) {
         columnService.delete(id);
-        return id;
     }
 }
